added fxml layout for DatabaseView added generic FxmlLoader removed maven modularization loaded database in DatabaseViewController